Bug 13746 - mDNS registration with avahi does not use fruit:model string
Summary: mDNS registration with avahi does not use fruit:model string
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.9.4
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
: 13763 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-01-15 13:26 UTC by Guenther Deschner
Modified: 2019-02-22 08:27 UTC (History)
2 users (show)

See Also:


Attachments
patch from master for v4.9 and v4.10 (2.66 KB, patch)
2019-01-31 16:42 UTC, Guenther Deschner
slow: review-
Details
patch from master for v4.9 and v4.10 (2.73 KB, patch)
2019-02-06 15:36 UTC, Guenther Deschner
slow: review+
Details
patch from master for 4.8 (2.72 KB, patch)
2019-02-06 15:37 UTC, Guenther Deschner
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Guenther Deschner 2019-01-15 13:26:03 UTC
The new fruit:model string is not taken into account when mDNS registration is happening using avahi. Patch following.
Comment 1 Guenther Deschner 2019-01-31 16:42:56 UTC
Created attachment 14812 [details]
patch from master for v4.9 and v4.10
Comment 2 Guenther Deschner 2019-01-31 16:44:34 UTC
*** Bug 13763 has been marked as a duplicate of this bug. ***
Comment 3 Guenther Deschner 2019-02-06 15:36:52 UTC
Created attachment 14826 [details]
patch from master for v4.9 and v4.10
Comment 4 Guenther Deschner 2019-02-06 15:37:22 UTC
Created attachment 14827 [details]
patch from master for 4.8
Comment 5 Guenther Deschner 2019-02-06 15:37:44 UTC
New patches with cherrypick info
Comment 6 Ralph Böhme 2019-02-06 15:39:30 UTC
Reassigning to Karolin for inclusion in 4.8, 4.9 and 4.10.
Comment 7 Karolin Seeger 2019-02-08 10:06:14 UTC
(In reply to Ralph Böhme from comment #6)
Pushed to autobuild-v4-{10,9,8}-test.
Comment 8 Karolin Seeger 2019-02-22 08:27:05 UTC
(In reply to Karolin Seeger from comment #7)
Pushed to all branches.
Closing out bug report.

Thanks!